Landing page redirects if logged in

--- a/assets/stylesheets/directoryopus.scss
+++ b/assets/stylesheets/directoryopus.scss
@@ -7,3 +7,9 @@
   font-weight: bold;
   font-size:  0.9em;
 }
+
+.directoryopus-link-heading .directoryopus-logo {
+    width: 2.25em;
+    height: 2.25em;
+    vertical-align: -0.65em;
+}
