--- a/assets/javascripts/discourse/templates/linkopuslanding.hbs
+++ b/assets/javascripts/discourse/templates/linkopuslanding.hbs
@@ -1,12 +1,5 @@
-<div class='contents clearfix body-page'>
-	<h1><img src="/plugins/discourse-directoryopus/images/opus_logo.png"> {{i18n "directoryopus.linkopuslanding_heading"}}</h1>
+<div class="contents clearfix body-page directoryopus-link-body">
+	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> {{i18n "directoryopus.linkopus_heading"}}</h1>
 	
-	
-  {{#if model}}
-  	<p>I have a model</p>
-  {{else}}	
-  	<p>I do NOT have a model</p>
-  {{/if}}
-  
-  <p>{{model}}</p>
+	<p>Moo</p>
 </div>
