--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -1,13 +1,13 @@
-<div class='contents clearfix body-page'>
+<div class="body-page directoryopus-link-body">
+	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> {{i18n "directoryopus.linkopus_heading"}}</h1>
 
-  <h1><img src="/plugins/discourse-directoryopus/images/opus_logo.png"> {{i18n "directoryopus.linkopus_heading"}}</h1>
+	<hr>
 	
-	
-  {{#if model}}
-  	<p>I have a model</p>
-  {{else}}	
-  	<p>I do NOT have a model</p>
-  {{/if}}
-  
-  <p>{{model}}</p>
+	{{#if model}}
+		<p>I have a model</p>
+	{{else}}	
+		<p>I do NOT have a model</p>
+	{{/if}}
+
+	<p>{{model}}</p>
 </div>
