--- a/assets/javascripts/discourse/templates/user/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
+++ b/assets/javascripts/discourse/templates/user/connectors/user-profile-primary/directoryopus-link-status-profile.hbs
@@ -1,5 +1,23 @@
 {{#if siteSettings.directoryopus_enabled}}
-    <div class="directoryopus-link-status">
-        directoryopus-link-status-profile.hbs
-    </div>
+	<div class="directoryopus-link-status">
+		<p>
+			Link status goes here.
+
+			{{#if opusCanLinkUser}}
+				{{#if opusViewingSelf}}
+					<span class="opus-nav-pills">{{#link-to 'linkopus'}}{{fa-icon "link"}}{{i18n 'directoryopus.linkopus_user_button_you'}}{{/link-to}}</span>
+				{{else}}
+					<span class="opus-nav-pills">{{#link-to 'linkopus'}}{{fa-icon "link"}}{{i18n 'directoryopus.linkopus_user_button_other'}}{{/link-to}}</span>
+				{{/if}}
+			{{/if}}
+		</p>
+
+		<p>
+			directoryopus-link-status-profile.hbs:
+			model.username: {{model.username}},
+			currentUser.staff: {{currentUser.staff}},
+			opusViewingSelf: {{opusViewingSelf}},
+			opusCanLinkUser: {{opusCanLinkUser}}
+		</p>
+	</div>
 {{/if}}
