--- a/assets/stylesheets/directoryopus.scss
+++ b/assets/stylesheets/directoryopus.scss
@@ -21,22 +21,29 @@
 			background-color: dark-light-diff($quaternary, $secondary, 70%, -70%);
 		}
 	}
+
 	&.active > a, > a.active {
 		color: $secondary;
 		background-color: $quaternary;
 	}
+
 	.fa {
 		margin-right: 5px;
 	}
-	a:hover i {
-		color: $quaternary;
+
+	.link-opus-button-icon {
+		width: 1.25em;
+		height: 1.25em;
+		padding-right:  0.25em;
+		vertical-align: top;
+		filter: saturate(0.4);
 	}
-	a.active i {
-		color: $secondary;
-	}
-	i {
-		color: $primary;
-	}
+	a:hover .link-opus-button-icon { filter: saturate(0.7); }
+	a.active .link-opus-button-icon { filter: saturate(1); }
+
+	i { color: $primary; }
+	a:hover i { color: $quaternary; }
+	a.active i { color: $secondary; }
 }
 
 .body-page.directoryopus-link-body {
