--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -1,26 +1,53 @@
 <div class="body-page directoryopus-link-body">
 
-	{{#if model}}
-		<hr>
-	{{/if}}
-
-	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> {{i18n "directoryopus.linkopus_heading"}}</h1>
+	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
 
 	{{#if model}}
 		{{#if ajaxPending}}
 			<p class="directoryopus-link-loading">...Please Wait...</p>
+			<hr>
 		{{else if opuslinkLoadError}}
 			<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadError}}</span></p>
+			<hr>
+		{{else if opuslinkLoadResult}}
+			{{#if opuslinkLoadResult.link_status}}
+				<p class="directoryopus-link-linked"><span class="directoryopus-link-linkheading">Your forum account is <b>linked</b>:</span> <span class="directoryopus-link-linkversion">Registered Directory Opus {{opuslinkLoadResult.link_status.link_version}} {{opuslinkLoadResult.link_status.link_edition}} user.</span></p>
+				<p>(Button: Refresh / More Details)</p>
+			{{else}}
+				<p class="directoryopus-link-unlinked">Your forum account is <b>not</b> linked to a registered Directory Opus licence.</p>
+				<p>To link your account:</p>
+				<form class="directoryopus-link-form">
+					<div class="directoryopus-link-inputs">
+						<label>Directory Opus registration code: {{input value=opuslinkRegCodeInput placeholder="e.g. ABC12-DE3FG-4HIJ5-KL6M7" title="Enter your Directory Opus registration code. e.g. ABC12-DE3FG-4HIJ5-KL6M7" pattern="\s*[A-Za-z0-9]{5}-[A-Za-z0-9]{5}-[A-Za-z0-9]{5}-[A-Za-z0-9]{5}\s*" size="32" autocomplete="off" autocorrect="off" autocapitalize="off"}}</label>
+						<button {{action "onOpusLinkSubmitRegCode"}} class="btn btn-primary opus-link" title="Submit">Submit</button>
+					</div>
+
+					<ul class="directoryopus-link-instructions">
+						<li>Use the most recent code we emailed you. New codes (e.g. for upgrades) replace old ones.</li>
+						<li><a href="https://www.gpsoft.com.au/DScripts/lostcode.asp">Lost Registration Retrieval</a> can email your code again.</li>
+						<li>You can normally find your registration code via the program itself.
+							<label class="directoryopus-link-showme">{{input type="checkbox" checked=opuslinkRegCodeShowMe class="toggle"}} Show Me</label>
+							{{#if opuslinkRegCodeShowMe}}
+								<p>(Add video here)</p>
+							{{/if}}
+						</li>
+						<li>Free evaluation codes cannot be linked.</li>
+					</ul>
+				</form>
+			{{/if}}
+			
+			{{#if opuslinkLoadResult.remote_error}}
+				<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">{{opuslinkLoadResult.remote_error}}</span></p>
+			{{/if}}
 		{{else}}
-			<p>(results go here)</p>
+			<p class="directoryopus-link-loaderror"><span class="directoryopus-link-errorheading">Error:</span> <span class="directoryopus-link-errormessage">Empty result from server.</span></p>
+			<hr>
 		{{/if}}
 	{{/if}}
 
-	<hr>
-
 	{{#unless model}}
 		<p class="directoryopus-link-getback">
-			You can get back to this page via <span class="link-opus-link">{{i18n "directoryopus.linkopus_hamburger_label"}}</span> in the top-right menu.
+			You can get back to this page via <span class="link-opus-link">{{i18n "directoryopus.linkopus_title"}}</span> in the top-right menu.
 			<img class="link-opus-menu-shot" src="/plugins/discourse-directoryopus/images/opus_account_link_menu.png" width="334" height="181" alt="[Menu Screenshot]">
 		</p>
 
