--- a/assets/stylesheets/directoryopus.scss
+++ b/assets/stylesheets/directoryopus.scss
@@ -6,55 +6,69 @@
 	background-position: 0.5em center;
 }
 
-.directoryopus-link-status .opus-nav-pills {
-	> a {
-		text-decoration: none !important;
-		border: none;
-		padding: 5px 12px;
-		color: $primary;
-		background: dark-light-diff($primary, $secondary, 90%, -65%);
-		font-size: 1.143em;
-		line-height: 20px;
-		transition: background .15s;
-		&:hover {
-			color: $quaternary;
-			background-color: dark-light-diff($quaternary, $secondary, 70%, -70%);
+.directoryopus-link-status {
+	display: inline-block;
+	.opus-nav-pills {
+		margin-top: 5px;
+		margin-bottom: 5px;
+		display: inline-block;
+		> a {
+			text-decoration: none !important;
+			white-space: nowrap;
+			border: none;
+			padding: 5px 12px;
+			color: $primary;
+			background: dark-light-diff($primary, $secondary, 90%, -65%);
+			font-size: 1.143em;
+			line-height: 20px;
+			transition: background .15s;
+			&:hover {
+				color: $quaternary;
+				background-color: dark-light-diff($quaternary, $secondary, 70%, -70%);
+			}
 		}
-	}
 
-	&.active > a, > a.active {
-		color: $secondary;
-		background-color: $quaternary;
-	}
+		&.active > a, > a.active {
+			color: $secondary;
+			background-color: $quaternary;
+		}
 
-	.fa {
-		margin-right: 5px;
-	}
+		.fa {
+			margin-right: 5px;
+		}
 
-	.link-opus-button-icon {
-		width: 1.25em;
-		height: 1.25em;
-		padding-right:  0.25em;
-		vertical-align: top;
-		filter: saturate(0.4);
-	}
-	a:hover .link-opus-button-icon { filter: saturate(0.7); }
-	a.active .link-opus-button-icon { filter: saturate(1); }
+		.link-opus-button-icon {
+			width: 1.25em;
+			height: 1.25em;
+			padding-right:  0.25em;
+			vertical-align: top;
+			filter: saturate(0.4);
+		}
+		a:hover .link-opus-button-icon { filter: saturate(0.7); }
+		a.active .link-opus-button-icon { filter: saturate(1); }
 
-	i { color: $primary; }
-	a:hover i { color: $quaternary; }
-	a.active i { color: $secondary; }
+		i { color: $primary; }
+		a:hover i { color: $quaternary; }
+		a.active i { color: $secondary; }
+	}
 }
 
 .body-page.directoryopus-link-body {
 	width: initial;
-	padding-left: 0;
-	padding-right: 0;
 	padding-bottom: 2em;
-	.directoryopus-link-heading .directoryopus-logo {
-		width: 2.25em;
-		height: 2.25em;
-		vertical-align: -0.65em;
+	h1 {
+		color: $tertiary;
+		margin: 1.5em 0 1em;
+		font-size: 1.5em;
+		display: flex;
+		align-items: center;
+		.directoryopus-logo {
+			float: left;
+			width: 1.75em;
+			height: 1.75em;
+			padding-bottom: 0.3em;
+			padding-right: 0.17em;
+		}
 	}
 	h2 {
 		color: $tertiary;
@@ -103,5 +117,42 @@
 			color: $quaternary;
 			font-weight: bold;
 		}
+	}
+	.directoryopus-link-unlinked {
+		border: 1px solid $quaternary;
+		display: inline-block;
+		padding: 1em;
+	}
+	.directoryopus-link-form {
+		border: 1px solid $tertiary;
+		display: inline-block;
+		padding: 1em;
+		font-size: 1.143em;
+	}
+	.directoryopus-link-inputs {
+		margin-bottom: 0.5em;
+		input {
+			margin-top: 2px;
+			margin-bottom: 2px;
+		}
+	}
+	.directoryopus-link-instructions {
+		font-size: 0.9em;
+		line-height: initial;
+	}
+	button.btn {
+		vertical-align: middle;
+	}
+	label {
+		color: $tertiary;
+		font-weight: bold;
+		display: inline;
+	}
+	label.directoryopus-link-showme {
+		margin: 0.5em;
+		font-size: 1em;
+		vertical-align: middle;
+		font-weight: initial;
+		line-height: initial;
 	}
 }
