--- a/assets/stylesheets/directoryopus.scss
+++ b/assets/stylesheets/directoryopus.scss
@@ -107,9 +107,10 @@
 		}
 	}
 	.directoryopus-link-loading {
-		font-size: 2em;
-		padding: 2em;
-		color: $tertiary;
+		background-color: $tertiary;
+		padding: 0.5em;
+		text-align: center;
+		color: $secondary;
 	}
 	.directoryopus-link-loaderror {
 		background-color: rgba($quaternary, 0.17);
