--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -3,6 +3,8 @@
 	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
 
 	{{#if model}}
+<button {{action "onOpusLinkClearLocal"}} class="btn opus-link" title="Clear Local">Clear Local</button>
+
 		{{#if opuslinkLoadError}}
 			{{#if opuslinkAjaxPending}}
 				<p class="directoryopus-link-loading">...Please Wait...</p>
@@ -24,7 +26,7 @@
 				<form class="directoryopus-link-form">
 					<div class="directoryopus-link-inputs">
 						<label>Directory Opus registration code: {{input enter="onOpusLinkSubmitRegCode" value=opuslinkRegCodeInput placeholder="e.g. ABC12-DE3FG-4HIJ5-KL6M7" title="Enter your Directory Opus registration code. e.g. ABC12-DE3FG-4HIJ5-KL6M7" pattern="\s*[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}-?[A-Za-z0-9]{5}\s*" size="32" autocomplete="off" autocorrect="off" autocapitalize="off" required="true"}}</label>
-						<button {{action "onOpusLinkSubmitRegCode"}} disabled={{opusLinkSubmitDisabled}} class="btn btn-primary opus-link" title="Submit">Submit</button>
+						<button {{action "onOpusLinkSubmitRegCode"}} class="btn btn-primary opus-link" title="Submit">Submit</button>
 					</div>
 					{{#if opuslinkAjaxPending}}
 						<p class="directoryopus-link-loading">...Please Wait...</p>
