--- a/assets/javascripts/discourse/templates/linkopus.hbs
+++ b/assets/javascripts/discourse/templates/linkopus.hbs
@@ -3,7 +3,7 @@
 	<h1 class="directoryopus-link-heading"><img class="directoryopus-logo" src="/plugins/discourse-directoryopus/images/opus_logo.png" alt=""> <span class="directoryopus-link-headingtext">Directory&nbsp;Opus - Account&nbsp;Linking</span></h1>
 
 	{{#if model}}
-<button {{action "onOpusLinkClearLocal"}} class="btn opus-link" title="Clear Local">Clear Local</button>
+		<p><button {{action "onOpusLinkClearLocal"}} class="btn opus-link" title="Clear Local">Clear Local (TODO: Remove This Button)</button></p>
 
 		{{#if opuslinkLoadError}}
 			{{#if opuslinkAjaxPending}}
